# alacrittyPro

./: .gitignore  Makefile
.github/workflows/: ci.yml  release.yml
docs/: README.md  developer_guide.md
docs/modules/: README.md  alacritty.md  alacritty_config.md  alacritty_terminal.md
manager-tauri/: README.md  index.html  package-lock.json  package.json  tsconfig.json
manager-tauri/src/: main.ts  styles.css
manager-tauri/src-tauri/: Cargo.toml  tauri.conf.json
manager-tauri/src-tauri/capabilities/: default.json
manager-tauri/src-tauri/icons/: icon.icns
manager-tauri/src-tauri/src/: lib.rs  main.rs
