[package]
name = "alacritty-manager"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "alacritty_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9"
base64 = "0.22"
tauri-plugin-liquid-glass = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
